# Python_Lumerical

./: .gitignore  Constructor.rst  Help.rst  README.md  conf.py  index.rst  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py
.github/workflows/: docs.yml
Constructor/: Constructor.py  Help.py  __init__.py
Constructor/help/: __init__.py  functions.json  results.json  solvers.json  start_lumerical.json  start_sim.json  structures.json
Examples/: Example_MMI_EME.py  Example_S_Bend_FDTD.rst  Example_Waveguide_FDE.py  Example_Waveguide_FDE.rst
Extras/: index.rst
Python_Lumerical_Sphinx/: conf.py
Python_Lumerical_Sphinx/Constructor/: Constructor.py
Python_Lumerical_Sphinx/rst/: Constructor.rst  modules.rst
Python_Lumerical_Sphinx/source/: Constructor.py
_build/doctrees/: Install.doctree  environment.pickle  index.doctree
_build/html/: Install.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_rst/: Constructor.Constructor.rst  Constructor.Help.rst  Constructor.rst  source.rst
_site/: .buildinfo  Constructor.html  Install.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_site/.doctrees/: Constructor.doctree  Install.doctree  environment.pickle  index.doctree
_site/Examples/: index.html  (+4 more)
_templates/: module.rst.jinja  package.rst.jinja
docs/: .buildinfo  Constructor.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html
examples-src/: Example_MZM_CHARGE.py  Example_S_Bend_EME.py
(+100 files in other folders)
